--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Главная страница</title>
 </head>
 
 <body>
-    <a href="#">Главная</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="#">Контакты</a>
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime odit voluptatem odio distinctio reiciendis nihil
+    <a class="menu-links" href="#">Главная</a>
+    <a class="menu-links" href="catalog/catalog.html">Каталог</a>
+    <a class="menu-links" href="#">Контакты</a>
+    <h1 class="main-headlines">Главная страница</h1>
+    <p class="text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime odit voluptatem odio distinctio reiciendis nihil
         nobis eum quisquam non necessitatibus accusamus commodi est ipsa nemo illo eos quasi, itaque natus?</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eius in repellendus sunt dignissimos ipsam
+    <h2 class="subtitle">Добро пожаловать на сайт</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia eius in repellendus sunt dignissimos ipsam
         reiciendis. Minima possimus soluta eaque voluptas modi tenetur nostrum! Ea tempora laudantium quos fuga iste!
     </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ratione reiciendis similique eius quos ipsa
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ratione reiciendis similique eius quos ipsa
         a, eaque incidunt fuga impedit non delectus officia aspernatur qui quis illo blanditiis commodi aliquam!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nam itaque corporis inventore neque animi,
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat nam itaque corporis inventore neque animi,
         facilis architecto modi deserunt velit magnam alias dolor recusandae reiciendis harum unde voluptates culpa
         iste.</p>
 </body>
