--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Каталог</title>
 </head>
 
 <body>
-    <a href="../index.html">Главная</a>
-    <a href="#">Каталог</a>
-    <a href="#">Контакты</a>
-    <h1>Каталог</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quos explicabo, veritatis ipsa, blanditiis enim
+    <a class="menu-links" href="../index.html">Главная</a>
+    <a class="menu-links" href="#">Каталог</a>
+    <a class="menu-links" href="#">Контакты</a>
+    <h1 class="main-headlines">Каталог</h1>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit quos explicabo, veritatis ipsa,
+        blanditiis enim
         possimus accusantium et accusamus dolorum error, delectus perspiciatis inventore cupiditate! Aut quis illum esse
         fuga labore vel laborum neque animi, sed culpa a. Eum nemo voluptatibus aspernatur animi fugiat, dignissimos,
         sit sequi itaque inventore saepe voluptas velit impedit pariatur eius recusandae, magnam minus quis! Harum,
@@ -24,15 +26,16 @@
         laudantium veritatis. Repellendus placeat alias doloremque magnam, impedit possimus soluta, voluptates tempora
         natus nulla praesentium! Facilis non tempora dolorem animi voluptatum at!</p>
     <img src="../img/cherry-pie.jpg" alt="Пирог с вишней">
-    <h2>Вишневый пирог</h2>
-    <p>Пирог с вишнёвой начинкой. Традиционный десерт для стран Европы и Северной Америки . Готовится из дрожжевого,
+    <h2 class="subtitle">Вишневый пирог</h2>
+    <p class="text">Пирог с вишнёвой начинкой. Традиционный десерт для стран Европы и Северной Америки . Готовится из
+        дрожжевого,
         песочного
         или слоёного теста. Характерен для русской и украинской кухни, где он обычно готовился на сметане . Вишня
         используется
         целая, свежая.</p>
     <img src="../img/khinkali.jpg" alt="Традиционные хинкали">
-    <h2>Традиционные хинкали</h2>
-    <p>Быстрые ответы
+    <h2 class="subtitle">Традиционные хинкали</h2>
+    <p class="text">Быстрые ответы
         Быстрый ответ
         Хинкали — грузинские пельмени, одно из самых известных блюд кавказской кухни, в которое просто невозможно не
         влюбиться!
@@ -40,8 +43,9 @@
         высоко у
         хвостика. Внутри пряное мясо и бульон, насыщенный ароматами специй и зелени.</p>
     <img src="../img/croissants.jpg" alt="Французские круассаны">
-    <h2>Французские круассаны</h2>
-    <p>Небольшие кондитерские изделия из муки высшего сорта, выполненные в виде рогалика в форме полумесяца.
+    <h2 class="subtitle">Французские круассаны</h2>
+    <p class="text">Небольшие кондитерские изделия из муки высшего сорта, выполненные в виде рогалика в форме
+        полумесяца.
         Готовят обычно круассаны из слоеного теста, также из слоеного дрожжевого. Тесто для круассанов содержит большое
         количество сливочного масла высокой жирности. Выпечка очень популярна во Франции, где ее традиционно подают к
         столу на
